# vigil

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
grafana-dashboards/: Camera Feeds-1735839035504.json
src/: camera-feed-processor.py  camera_feed.py  camera_feed_extractor.py  detection-poc.py  feed_classifier.py  feed_extractor.py  ip_camera_fetcher.py  start.py
tests/: test_camera_feed_extractor.py
